--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     overflow: hidden;
+    user-select: none;
 }
 
 :root {
@@ -34,7 +35,7 @@ body {
     width: 200px;
     height: 200px;
     right: 15px;
-    bottom: 15px;
+    bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -44,7 +45,7 @@ body {
     position: absolute;
     width: 100px;
     left: 5px;
-    top: 5px;
+    top: 50px;
     border: solid var(--secColor) 5px;
     height: 500px;
     display: flex;
@@ -70,10 +71,11 @@ body {
     height: 130px;
     right: 30%;
     left: 30%;
-    bottom: 15px;
+    bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    background-color: var(--firstColor);
 }
 
 h1 {
@@ -88,7 +90,7 @@ h1 {
 #colorPicker {
     position: absolute;
     left: 15px;
-    bottom: 15px;
+    bottom: 30px;
     border: solid 5px var(--secColor);
     width: 150px;
     height: 200px;
@@ -108,4 +110,40 @@ h1 {
     display: flex;
     flex-direction: row;
     width: 130px;
+}
+
+.topbar {
+    background-color: var(--secColor);
+    width: 100%;
+    height: 30px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.topbar button {
+    height: 100%;
+    border: none;
+    padding: 5px;
+    background-color: var(--thirdColor);
+    color: white;
+    font-weight: bolder;
+    border-right: solid 1px black;
+    box-shadow: black inset 0px -1px 2px;
+    transition: 0.25s;
+}
+
+.topbar button:hover {
+    background-color: var(--fifthColor);
+}
+
+.bottombar {
+    position: absolute;
+    width: 100%;
+    height: 20px;
+    background-color: rgb(148, 0, 0);
+    bottom: 0px;
+    left: 0px;
+    display: flex;
+    flex-direction: row-reverse;
 }
