--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+@font-face {
+    font-family: MainFont;
+    src: url(./src/fonts/Pixeled.ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
     overflow: hidden;
     user-select: none;
+    font-family: MainFont;
 }
 
 :root {
@@ -16,7 +22,7 @@
 body {
     display: flex;
     justify-content: center;
-    background-color: var(--firstColor);
+    background-color: rgb(19, 5, 5);
 }
 
 .main {
@@ -24,33 +30,44 @@ body {
 }
 
 .main canvas {
-    border: solid var(--secColor) 5px;
     cursor: none;
     background-color: white;
+    box-shadow: 0px 0px 10px black;
 }
 
 .layers {
-    border: solid var(--secColor) 5px;
     position: absolute;
     width: 200px;
     height: 200px;
-    right: 15px;
-    bottom: 30px;
+    right: 0px;
+    bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 10px black;
+    transition: 0.25s;
+}
+
+.layers:hover {
+    right: 5px;
+    bottom: 25px;
 }
 
 .tools {
     position: absolute;
     width: 100px;
-    left: 5px;
-    top: 50px;
-    border: solid var(--secColor) 5px;
+    left: 0px;
+    top: 30px;
     height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 10px black;
+    transition: 0.25s;
+}
+
+.tools:hover {
+    top: 35px;
+    left: 5px;
 }
 
 .tool img {
@@ -66,38 +83,50 @@ body {
 }
 
 .frames {
-    border: solid var(--secColor) 5px;
     position: absolute;
     height: 130px;
     right: 30%;
     left: 30%;
-    bottom: 30px;
+    bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background-color: var(--firstColor);
+    background-color: rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 10px black;
+    transition: 0.25s;
+}
+
+.frames:hover {
+    bottom: 25px;
 }
 
 h1 {
-    font-size: 15px;
-    background-color: var(--thirdColor);
-    padding: 5px;
-    border-bottom: solid var(--fifthColor) 5px;
-    width: 100%;
+    color: white;
+    font-size: 8px;
     text-align: center;
+    border-bottom: solid 1px white;
+    font-weight: lighter;
+    letter-spacing: 5px;
 }
 
 #colorPicker {
     position: absolute;
-    left: 15px;
-    bottom: 30px;
-    border: solid 5px var(--secColor);
+    left: 0px;
+    bottom: 20px;
     width: 150px;
     height: 200px;
-    background-color: var(--fourColor);
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5px;
+    box-shadow: 0px 0px 10px black;
+    transition: 0.25s;
+}
+
+#colorPicker:hover {
+    left: 5px;
+    bottom: 25px;
 }
 
 #colorPickerCanvas canvas {
@@ -113,7 +142,7 @@ h1 {
 }
 
 .topbar {
-    background-color: var(--secColor);
+    background-color: rgb(148, 0, 0);
     width: 100%;
     height: 30px;
     position: absolute;
@@ -125,16 +154,17 @@ h1 {
     height: 100%;
     border: none;
     padding: 5px;
-    background-color: var(--thirdColor);
+    background-color: rgb(92, 14, 14);
     color: white;
-    font-weight: bolder;
     border-right: solid 1px black;
     box-shadow: black inset 0px -1px 2px;
     transition: 0.25s;
+    font-size: 7px;
+    position: inherit;
 }
 
 .topbar button:hover {
-    background-color: var(--fifthColor);
+    background-color: red;
 }
 
 .bottombar {
